--- a/docker/guacamole/compose.yaml
+++ b/docker/guacamole/compose.yaml
@@ -1,7 +1,21 @@
 services:
-  postgres:
+  postgres-17:
+    container_name: postgres-17
+    image: postgres:17-alpine
+    restart: unless-stopped
+    volumes:
+      - pginit:/docker-entrypoint-initdb.d
+      - pgdata:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER:-guacadb}
+      POSTGRES_PASSWORD:
+      POSTGRES_INITDB_ARGS: --auth-host=md5
+    labels:
+      - "com.centurylinklabs.watchtower.enable=true"
+
+  postgres-13:
     container_name: postgres
-    image: postgres:17.3-alpine3.21
+    image: postgres:13-alpine
     restart: unless-stopped
     volumes:
       - pginit:/docker-entrypoint-initdb.d
