--- a/docker/guacamole/compose.yaml
+++ b/docker/guacamole/compose.yaml
@@ -28,7 +28,7 @@ services:
       - 8084:8080/tcp # guacamole is on :8080/guacamole, not /.
     environment:
       GUACD_HOSTNAME: guacd
-      POSTGRES_HOSTNAME: postgres
+      POSTGRES_HOSTNAME: postgres-17
       POSTGRES_DATABASE: ${POSTGRES_USER:-guacadb}
       POSTGRES_USER: ${POSTGRES_USER:-guacadb}
       POSTGRES_PASSWORD:
