--- a/docker/watchtower/compose.yaml
+++ b/docker/watchtower/compose.yaml
@@ -15,6 +15,7 @@ services:
       - WATCHTOWER_LABEL_ENABLE=true
       - WATCHTOWER_INCLUDE_RESTARTING=true
       - WATCHTOWER_NO_STARTUP_MESSAGE=false
+      - WATCHTOWER_SCHEDULE=55 6 * * 1,4
       - WATCHTOWER_NOTIFICATIONS=email
       - WATCHTOWER_NOTIFICATION_EMAIL_FROM=erifri.smtp@gmail.com
       - WATCHTOWER_NOTIFICATION_EMAIL_TO=erik@efhost.se
