--- a/docker/watchtower/compose.yaml
+++ b/docker/watchtower/compose.yaml
@@ -11,17 +11,17 @@ services:
       - /etc/timezone:/etc/timezone:ro
       - /root/.docker/config.json:/config.json 
     environment:
-      - WATCHTOWER_CLEANUP=true
-      - WATCHTOWER_LABEL_ENABLE=true
-      - WATCHTOWER_INCLUDE_RESTARTING=true
-      - WATCHTOWER_NO_STARTUP_MESSAGE=false
-      - WATCHTOWER_SCHEDULE=55 5 * * *
-      - WATCHTOWER_NOTIFICATIONS=email
-      - WATCHTOWER_NOTIFICATION_EMAIL_FROM=erifri.smtp@gmail.com
-      - WATCHTOWER_NOTIFICATION_EMAIL_TO=erik@efhost.se
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER=smtp.gmail.com
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=587
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=erifri.smtp@gmail.com
+      - WATCHTOWER_CLEANUP: true
+      - WATCHTOWER_LABEL_ENABLE: true
+      - WATCHTOWER_INCLUDE_RESTARTING: true
+      - WATCHTOWER_NO_STARTUP_MESSAGE: false
+      - WATCHTOWER_SCHEDULE: 55 5 * * * *
+      - WATCHTOWER_NOTIFICATIONS: email
+      - WATCHTOWER_NOTIFICATION_EMAIL_FROM: erifri.smtp@gmail.com
+      - WATCHTOWER_NOTIFICATION_EMAIL_TO: erik@efhost.se
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER: smtp.gmail.com
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT: 587
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER: erifri.smtp@gmail.com
       - WATCHTOWER_NOTIFICATIONS_HOSTNAME
       - WATCHTOWER_NOTIFICATION_TITLE_TAG
       - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD
