--- a/docker/logspout/compose.yaml
+++ b/docker/logspout/compose.yaml
@@ -6,10 +6,11 @@ services:
     restart: unless-stopped
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - routes:/mnt/routes
     command: syslog+udp://syslog.efhome.se:514
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
 
 
 volumes:
-  logs:
+  routes:
