--- a/docker/watchtower/compose.yaml
+++ b/docker/watchtower/compose.yaml
@@ -9,8 +9,8 @@ services:
       - /etc/timezone:/etc/timezone:ro
       - /root/.docker/config.json:/config.json
       - /etc/nsswitch.conf:/etc/nsswitch.conf
-    extra_hosts:
-      - "index.docker.io:98.85.153.80"
+    env_file:
+      - stack.env
     environment:
       WATCHTOWER_CLEANUP: true
       WATCHTOWER_LABEL_ENABLE: true
