--- a/docker/watchtower/compose.yaml
+++ b/docker/watchtower/compose.yaml
@@ -12,19 +12,20 @@ services:
     env_file:
       - stack.env
     environment:
-      WATCHTOWER_CLEANUP: true
-      WATCHTOWER_LABEL_ENABLE: true
-      WATCHTOWER_INCLUDE_RESTARTING: true
-      WATCHTOWER_NO_STARTUP_MESSAGE: false
-      WATCHTOWER_SCHEDULE: 55 5 * * * *
-      WATCHTOWER_NOTIFICATIONS: email
-      WATCHTOWER_NOTIFICATION_EMAIL_FROM: erifri.smtp@gmail.com
-      WATCHTOWER_NOTIFICATION_EMAIL_TO: erik@efhost.se
-      WATCHTOWER_NOTIFICATION_EMAIL_SERVER: smtp.gmail.com
-      WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT: 587
-      WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER: erifri.smtp@gmail.com
-      WATCHTOWER_NOTIFICATIONS_HOSTNAME:
+      TZ: Europe/Stockholm
+      WATCHTOWER_CLEANUP: "true"
+      WATCHTOWER_LABEL_ENABLE: "true"
+      WATCHTOWER_INCLUDE_RESTARTING: "true"
+      WATCHTOWER_NO_STARTUP_MESSAGE: "false"
+      WATCHTOWER_SCHEDULE: "55 5 * * * *"
       WATCHTOWER_NOTIFICATION_TITLE_TAG:
+      WATCHTOWER_NOTIFICATIONS: email
+      WATCHTOWER_NOTIFICATIONS_HOSTNAME:
       WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD:
+      WATCHTOWER_NOTIFICATION_EMAIL_FROM: #erifri.smtp@gmail.com
+      WATCHTOWER_NOTIFICATION_EMAIL_TO: #erik@efhost.se
+      WATCHTOWER_NOTIFICATION_EMAIL_SERVER: #smtp.gmail.com
+      WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT: #587
+      WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER: #erifri.smtp@gmail.com
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
