--- a/docker/dozzle/compose.yaml
+++ b/docker/dozzle/compose.yaml
@@ -3,6 +3,8 @@ services:
   dozzle:
     container_name: dozzle
     image: amir20/dozzle:latest
+    environment:
+      - DOZZLE_REMOTE_AGENT=10.0.1.25:7007
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
