--- a/docker/dozzle-agent/compose.yaml
+++ b/docker/dozzle-agent/compose.yaml
@@ -1,6 +1,7 @@
 services:
   dozzle-agent:
     image: amir20/dozzle:latest
+    name: dozzle_agent
     command: agent
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
