--- a/docker/media/compose.yaml
+++ b/docker/media/compose.yaml
@@ -5,7 +5,7 @@ services:
     image: sctx/overseerr:latest
     container_name: overseerr
     environment:
-      - LOG_LEVEL=debug
+      - LOG_LEVEL=info
       - TZ=Europe/Stockholm
       - PORT=5055 #optional
     ports:
