--- a/docker/dozzle/compose.yaml
+++ b/docker/dozzle/compose.yaml
@@ -9,6 +9,9 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - 8080:8080
+    restart: unless-stopped
+    labels:
+      - "com.centurylinklabs.watchtower.enable=true"
 
 #services:
 #  custom_base:
