--- a/docker/dozzle-agent/compose.yaml
+++ b/docker/dozzle-agent/compose.yaml
@@ -7,3 +7,6 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     ports:
       - 7007:7007
+    restart: unless-stopped
+    labels:
+      - "com.centurylinklabs.watchtower.enable=true"
