--- a/docker/watchtower/compose.yaml
+++ b/docker/watchtower/compose.yaml
@@ -17,7 +17,7 @@ services:
       WATCHTOWER_LABEL_ENABLE: "true"
       WATCHTOWER_INCLUDE_RESTARTING: "true"
       WATCHTOWER_NO_STARTUP_MESSAGE: "false"
-      WATCHTOWER_SCHEDULE: "55 5 * * * *"
+      WATCHTOWER_SCHEDULE: "5 55 5 * * *"
       WATCHTOWER_NOTIFICATION_TITLE_TAG:
       WATCHTOWER_NOTIFICATIONS: email
       WATCHTOWER_NOTIFICATIONS_HOSTNAME:
