--- a/docker/watchtower/compose.yaml
+++ b/docker/watchtower/compose.yaml
@@ -28,5 +28,6 @@ services:
       WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT: #587
       WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER: #erifri.smtp@gmail.com
       WATCHTOWER_WARN_ON_HEAD_FAILURE: never
+      WATCHTOWER_LOG_LEVEL: 
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
